# histogram-equalization

./: CMakeLists.txt  README.md  histequalizer  main.cc  main.cu
c++/: CMakeLists.txt  kernel.cu  main.cu
python/: main.py  requirements.txt
